--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Закрывающий тег</title>
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="./images/apple-icon.png" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
     <link rel="stylesheet" href="./styles/globals.css" />
@@ -11,8 +14,419 @@
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
   <body class="page">
-    <header class="header"></header>
-    <main></main>
+    <header class="header">
+      <div class="header__cover">
+        <h1 class="header__title">&lt;/HTML&gt;</h1>
+        <p class="header__subtitle">закрывающий тег</p>
+      </div>
+    </header>
+    <main class="content">
+      <section class="retrospective__cards">
+        <article class="card card_intro">
+          <h2 class="card__heading heading_intro">
+            Фритрек и нулевой спринт: Подготовка к работе
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_intro__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_intro">
+            <p class="card__text text_intro">
+              Это было самое начало пути. На этом этапе важно было проникнуться
+              основами и настроиться на учёбу. И, возможно, подумать, как новые
+              знания могут повлиять на ваше будущее.
+            </p>
+            <p class="card__text text_intro">
+              Если б мы знали, что это такое. Страшно, очень страшно.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint1-start">
+          <h2 class="card__heading heading_sprint1-start">
+            1 спринт: Я — чистый лист
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint1-start__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint1-start">
+            <p class="card__text text_sprint1-start">
+              На первых этапах мы работали со страхами и сомнениями, которые
+              часто испытывают новички. Один из них — страх перед чистым листом.
+              Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто
+              за этим ощущением скрываются более глубокие вопросы: с чего
+              начать? а вдруг будет слишком сложно? что, если я не справлюсь?
+            </p>
+            <p class="card__text text_sprint1-start">
+              Страха перед листом не было, были лишь слабоумие и отвага.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint1-end">
+          <h2 class="card__heading heading_sprint1-end">
+            1 спринт: А если не получится?
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint1-end__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint1-end">
+            <p class="card__text text_sprint1-end">
+              Первый проект — позади! Но это всё ещё самое начало пути. Радость
+              могла быстро померкнуть и смениться ожиданием провала. Или вы,
+              наоборот, могли вдохновиться успехами и поверить в себя.
+            </p>
+            <p class="card__text text_sprint1-end">
+              Путь начался. Осталось понять, куда.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint2-start">
+          <h2 class="card__heading heading_sprint2-start">
+            2 спринт: Погоня за идеалом
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint2-start__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint2-start">
+            <p class="card__text text_sprint2-start">
+              На этом этапе вы уже достаточно разбирались в основах вёрстки,
+              чтобы понять, как много ещё впереди. Вы могли попытаться погнаться
+              за идеалом и понять, что он недостижим. А, может, вы вовсе и не
+              подвержены перфекционизму и вместо того, чтобы сделать идеально,
+              старались просто сделать.
+            </p>
+            <p class="card__text text_sprint2-start">
+              Да, перфекционизм — моя ахиллесова пята.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint2-end">
+          <h2 class="card__heading heading_sprint2-end">
+            2 спринт: О тех, кто рядом
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint2-end__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint2-end">
+            <p class="card__text text_sprint2-end">
+              Всё это время вы были не одиноки (хотя, возможно, иногда и
+              чувствовали, что одни против целого мира). Вас окружали
+              одногруппники, команда сопровождения и просто близкие люди,
+              которым можно пожаловаться, если очередной макет просто так не
+              поддавался. Осваивать что-то новое легче, когда рядом есть
+              единомышленники, не правда ли?
+            </p>
+            <p class="card__text text_sprint2-end">
+              Ощущение, что я одиноко одинокий одиночка, присутствует.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint3-start">
+          <h2 class="card__heading heading_sprint3-start">
+            3 спринт: Обходные стратегии
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint3-start__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint3-start">
+            <p class="card__text text_sprint3-start">
+              На этом курсе вы постоянно решали разные задачи. В какой-то момент
+              вам могло показаться, что решения просто иссякли. Значит, пришло
+              время посмотреть на задачу под другим углом.
+            </p>
+            <p class="card__text text_sprint3-start">
+              Мы учулись стоять на голове из последних сил.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_sprint3-end">
+          <h2 class="card__heading heading_sprint3-end">
+            3 спринт: Когда опускаются руки
+          </h2>
+          <div class="card__image">
+            <span class="card__label"></span>
+            <img
+              class="card__image card_sprint3-end__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_sprint3-end">
+            <p class="card__text text_sprint3-end">
+              Во время учёбы часто возникает чувство, когда не знаешь, за что
+              хвататься. Вроде и проектную пора сдавать, и задачи хочется
+              порешать, и в теории получше разобраться, и жизнь не забыть
+              пожить. В такие моменты очень нужна концентрация. Вспомните,
+              откуда вы её черпали.
+            </p>
+            <p class="card__text text_sprint3-end">
+              Концентрация рождается в расхождении пикселей.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+        <article class="card card_now">
+          <h2 class="card__heading heading_now">«Сейчас я здесь»</h2>
+          <div class="card__image">
+            <span class="card__label card"></span>
+            <img
+              class="card__image card_now__image"
+              src="images/image.png"
+              alt="Парень с ноутбуком на фоне гор, в стиле аниме"
+              loading="lazy"
+            />
+          </div>
+          <div class="card__text-block text-block_now">
+            <p class="card__text text_now">
+              Сейчас вы уже очень много знаете о вёрстке. Но это только начало.
+              Во-первых, впереди ещё много материала про «красотищу». Во-вторых,
+              с окончанием курса учёба не заканчивается. Вёрстка — это целый
+              мир. И этот мир постоянно меняется. Познать его полностью не
+              получится, но это тот случай, когда важен сам процесс познания.
+              Ведь часто путь — и есть результат.
+            </p>
+            <p class="card__text text_now">
+              Что ж...<br />
+              Страничка есть, а вот ощущение, что я знаю, что делаю — нет.
+            </p>
+            <div class="card__like-container">
+              <button class="card__icon-button" type="button">
+                <svg
+                  class="like-icon"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <use href="#heart"></use>
+                </svg>
+              </button>
+              <button class="card__like-button button" type="button">
+                <span class="button__text explanation">Like</span>
+              </button>
+            </div>
+          </div>
+        </article>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="card__floppy-container">
+      <button class="footer__cover card__icon-button" type="button">
+        <svg class="floppy">
+          <use href="#floppy" />
+        </svg>
+        <span class="footer__title button__text explanation">
+          Сохранить на память
+        </span>
+      </button>
+      </div>
+    </footer>
+    <!--<svg width="20" heught="20">
+          <use href="#diskette"/>
+            </svg> выводим дискету в люом месте нужно вставить это код!-->
+    <svg class="floppy" xmlns="http://www.w3.org/2000/svg" style="display: none">
+      <symbol id="floppy" viewBox="0 0 39 39" fill="none">
+        <path
+          fill="#000"
+          d="M0 0h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zm0 3h3.00001v3H0zM33 0v3h-3.00001V0z"
+        />
+        <path
+          fill="#000"
+          d="M30.0031 0v3h-3.00001V0zm-3.0033 0v3h-3.00001V0z"
+        />
+        <path fill="#000" d="M23.9998 0v3h-3.00001V0zM20.999 0v3h-3.00001V0z" />
+        <path fill="#000" d="M17.9998 0v3h-3.00001V0zM14.999 0v3h-3.00001V0z" />
+        <path fill="#000" d="M11.9999 0v3H8.99989V0zM8.99609 0v3H5.99608V0z" />
+        <path
+          fill="#000"
+          d="M5.99994 0v3H2.99993V0zM36.0008 3v3h-3.00001V3zM8.99609 6v3H5.99608V6zm0-3v3H5.99608V3zm0 6v3H5.99608V9zM30.0031 6v3h-3.00001V6zm0-3v3h-3.00001V3zm0 6v3h-3.00001V9zm-6.0033-3v3h-3.00001V6zm0-3v3h-3.00001V3zm0 6v3h-3.00001V9zm6.0033 3v3h-3.00001v-3zm-3.0033 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M23.9998 12v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M17.9998 12v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M11.9999 12v3H8.99989v-3zm-3.00381 0v3H5.99608v-3zM33 21v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M30.0031 21v3h-3.00001v-3zm-3.0033 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M23.9998 21v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M17.9998 21v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M11.9999 21v3H8.99989v-3zm-3.00381 0v3H5.99608v-3zM33 24v3h-3.00001v-3zM8.99609 24v3H5.99608v-3zM33 27v3h-3.00001v-3zM8.99609 27v3H5.99608v-3zM33 30v3h-3.00001v-3zM8.99609 30v3H5.99608v-3zm0 3v3H5.99608v-3zM33 33v3h-3.00001v-3zm3.0008 3v3h-3.00001v-3zM33 36v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M30.0031 36v3h-3.00001v-3zm-3.0033 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M23.9998 36v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M17.9998 36v3h-3.00001v-3zm-3.0008 0v3h-3.00001v-3z"
+        />
+        <path
+          fill="#000"
+          d="M11.9999 36v3H8.99989v-3zm-3.00381 0v3H5.99608v-3z"
+        />
+        <path
+          fill="#000"
+          d="M5.99994 36v3H2.99993v-3zM39 39h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001v-3H39zm0-3h-3.00001V9H39zm0-3h-3.00001V6H39z"
+        />
+      </symbol>
+    </svg>
+
+    <svg
+      class="like-icon"
+      xmlns="http://www.w3.org/2000/svg"
+      style="display: none"
+    >
+      <symbol id="heart" viewBox="0 0 39 39" fill="none">
+        <path
+          fill="#000"
+          d="M12 6H9v3h3V6ZM15 6h-3v3h3V6ZM9 9H6v3h3V9ZM9 12H6v3h3v-3ZM9 15H6v3h3v-3ZM18 6h-3v3h3V6ZM12 18H9v3h3v-3ZM15 21h-3v3h3v-3ZM18 24h-3v3h3v-3ZM27 6h3v3h-3V6ZM24 6h3v3h-3V6ZM30 9h3v3h-3V9ZM30 12h3v3h-3v-3ZM30 15h3v3h-3v-3ZM21 6h3v3h-3V6ZM27 18h3v3h-3v-3ZM24 21h3v3h-3v-3ZM21 24h3v3h-3v-3ZM21 9h-3v3h3V9ZM21 27h-3v3h3v-3Z"
+        />
+      </symbol>
+    </svg>
+
     <script src="./scripts/like.js"></script>
   </body>
 </html>
