--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/animations.css" />
   </head>
+
   <body class="page">
     <header class="header">
       <div class="header__cover">
@@ -46,10 +47,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -85,10 +83,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -122,10 +117,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -161,10 +153,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -201,10 +190,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -238,10 +224,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -277,10 +260,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -316,10 +296,7 @@
             </p>
             <div class="card__like-container">
               <button class="card__icon-button" type="button">
-                <svg
-                  class="like-icon"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
+                <svg class="like-icon" xmlns="http://www.w3.org/2000/svg">
                   <use href="#heart"></use>
                 </svg>
               </button>
@@ -329,24 +306,28 @@
             </div>
           </div>
         </article>
+        <div class="footer">
+          <div class="card__floppy-container">
+            <button class="footer__cover card__icon-button" type="button">
+              <svg class="floppy">
+                <use href="#floppy" />
+              </svg>
+              <span class="footer__title button__text explanation">
+                Сохранить на память
+              </span>
+            </button>
+          </div>
+        </div>
       </section>
     </main>
-    <footer class="footer">
-      <div class="card__floppy-container">
-      <button class="footer__cover card__icon-button" type="button">
-        <svg class="floppy">
-          <use href="#floppy" />
-        </svg>
-        <span class="footer__title button__text explanation">
-          Сохранить на память
-        </span>
-      </button>
-      </div>
-    </footer>
     <!--<svg width="20" heught="20">
           <use href="#diskette"/>
             </svg> выводим дискету в люом месте нужно вставить это код!-->
-    <svg class="floppy" xmlns="http://www.w3.org/2000/svg" style="display: none">
+    <svg
+      class="floppy"
+      xmlns="http://www.w3.org/2000/svg"
+      style="display: none"
+    >
       <symbol id="floppy" viewBox="0 0 39 39" fill="none">
         <path
           fill="#000"
